--- a/windows/4.2/release_notes.txt
+++ b/windows/4.2/release_notes.txt
@@ -1,14 +1,12 @@
-We've got some exciting improvements and bug fixes to make your email experience even smoother in this update.
+We've got some exciting improvements and bug fixes to make your email experience even smoother in this update 🎉.
 
-Fixed: 🛠️ Taskbar reliability: We've tamed the taskbar beast so you can unleash Canary with a single click. No more waiting around, it's instant gratification.
-Fixed: 🚀 Performance boost: Say goodbye to CPU hogging and hello to a smooth experience.
-Fixed: ✨ Conversation summaries: Condense epic email threads into bite-sized summaries—because who has time for novels?
-Fixed: 📁 EML sharing: Share emails as EML files with ease!
-Fixed: ⌨️ Shortcut consistency: Delete shortcuts are now saved and work as expected.
-Fixed: 🛡️ Fixed crashes: Numerous stability improvements have been implemented to enhance the overall user experience.
+Fixed: 🔍 Seamless Email Preview: See what's next. Your preview instantly adjusts after deleting or archiving emails.
+Fixed: 🛡️ Compose Shield: Never lose your work again. Canary now prompts you to save unsaved emails before exiting, so you can pick up where you left off.
+Fixed: 🧹 Bulk Cleaner Enhanced: Your choices stay put. Deselected emails now remain untouched as you scroll.
+Fixed: 📄 Doc Access Unlocked: Seamlessly manage emails requesting document access. No more workflow interruptions.
+Fixed: 🎯 Focus Enhanced: Fixed a bug that caused cursor invisibility in the Compose screen when using a light theme. Compose emails with ease now!
 
-New: 📎 Attachment Alert: Forget to attach that important file? Don't worry, Canary's got your back.
-New: 🔄 Account Juggling Made Easy: Arrange your accounts, your way.
-New: 📧 Default mail app: Make Canary your go-to mail app with one click.
+New: 🤖 Copilot Chat: Launching your personal AI email assistant chat. Compose smarter, find faster, manage easier.
+New: ↩️↪️ Reply/Forward Indicators: Stay on top of your email conversations with our visual cues that show which messages have been replied to or forwarded.
 
-We're continuously working on improving Canary Mail. Stay tuned for more updates and features!
+We're continuously working on improving Canary Mail. 🚀 Stay tuned for more updates and features! 🔧✨
