--- a/windows/5.1.24/release_notes.txt
+++ b/windows/5.1.24/release_notes.txt
@@ -4,5 +4,6 @@ Fixed: 🗓️ Agenda View Crash – App no longer crashes when opening the Cale
 Fixed: 🗂️ IMAP Folder Creation – You can now create new folders without any hiccups.
 Fixed: 📏 Email Cutoff – Email content no longer gets clipped when resizing the view pane.
 Fixed: 📥 Invisible Emails – Made improvements for users unable to see emails in their Inbox.
+Fixed: 🌐 Translations – Translations are now made better for a smoother multilingual experience.
 
 More improvements are already in the works — stay tuned and thank you for using Canary Mail!
