--- a/iOS/5.00/release-notes.txt
+++ b/iOS/5.00/release-notes.txt
@@ -1,1 +1,1 @@
-New: This update focuses on iOS 26 compatibility and polish. We’ve refreshed the UI to align with iOS 26, making your email experience smoother and more consistent. ✨
+New: ✨ iOS 26 Compatibility - This update refreshes the UI to align with iOS 26 and improves overall polish. We’re committed to making your email experience as seamless and powerful as possible.
